--- a/style.css
+++ b/style.css
@@ -1,156 +1,89 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
 *{
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
-    text-decoration: none;
-    list-style: none;
+    font-family: "Comfortaa", sans-serif;
+   
+  }
 
-}
-
-body {
-    font-family: "Poppins", sans-serif;
-}
-
- .container {
-    max-width: 1200px;
+main{
+    width: 1366px;
+    height: 2000px;                
     margin: 0 auto;
+}
+
+header{
+    width: 1366px;
+    height: 200px;
+    text-align: center;
 
 
- }
+}
 
-
- .header {
-    background-image: linear-gradient(
-        rgba(0,0,0,0.7),
-        rgba(0,0,0,0.7)),
-        url(IMG/BANNERPAGINAWEB.jpg);
-        background-position: center bottom;
-        background-repeat: no-repeat;
-        background-size: cover;
-        min-height: 70vh;
-        display: flex;
-        align-items: center;
- }
-
- .menu {
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
+nav{
+    width: 1366px;
+    height: 50px;
+    background-color: rgb(118, 191, 217);
     display: flex;
+    justify-content: space-evenly;
     align-items: center;
-    justify-content: space-between;
- }
-
- .logo {
-    color: #fffdfc;
-    font-size: 25 px;
-    font-weight: 800;
- }
-
- .menu .navbar ul li {
-    position: relative;
-    float: left;
- }
-
- .menu .navbar ul li a {
-    font-size: 18px;
-    padding: 20px;
-    color: #fffdfc;
-    display: block;
-    font-weight: 600;
+    overflow: hidden;
     
- }
+}
+nav a{
+    text-decoration: none;
+    padding: 15px;
+    font-family: "Comfortaa", sans-serif;
+    transition: 1s;
 
- .menu .navbar ul li a :hover{
-    color: #ce967b;
- }
-
- #menu {
-     display: none;   
- }
-
- .menu-icono {
-    width: 25px;   
 }
 
-.menu label {
-    cursor: pointer;
-    display: none;   
+nav a:hover{
+    background-color: rgba(23, 144, 196, 0.982);
+    transform: scale(1.2);
 }
 
-.header-content {
+section{
+    width: 1366px;
+    height: 1500px;
+    background-image: url(./IMG/FONDOESTRELLAS.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+section .personaje{
+    width: 1300px;
+    height: 350px;
+    margin-left: 33px;
+    margin-top: 20px;
+    float: left;
+}
+
+.personaje .foto{
+    width: 400px;
+    height: 350px;
+    float: left;
+    text-align: center;
+    margin-left: 33px;
+    border-bottom: rgb(78, 141, 199) 4px solid;
+}
+
+.foto img{
+    width: 90%;
+    height: 100%;
     text-align: center;
 }
 
-.header-content h1 {
-    font-size: 75px;
-    line-height: 80px;
-    color: #f9fafc;
-    text-transform: uppercase;
-    margin-bottom: 35 px
+.personaje .texto{
+    width: 800px;
+    height: 350px;
+    background-color: rgba(105, 151, 194, 0.333);
+    float: left;
+    margin-left: 33px;
+    padding: 20px;
 }
 
-.header-content p {
-    font-size: 16px;
-    color: #c5c5c5;
-    padding: 0 250px;
-    margin-bottom: 25px;
-}
-
-.btn-1 {
-    display: inline-block;
-    padding: 11px 35px;
-    background-color: #ce967b;
-    color: #f9fafc;
-    text-transform: uppercase;
-}
-
-.btn-1:hover{
-    background-color:#000000
-}
-
-.coffee {
-    padding: 100px 0;
-    background-color: #e1e2e6;
-    position: relative;
-}
-
-
-.coffee-content {
-    text-align: center;
-}
-
-.coffee-content h2 {
-    font-size: 55px;
-    line-height: 70px;
-    color: #323337;
-    text-transform: uppercase;
-    padding: 0 250px;
-    margin-bottom: 15px;
-}
-
-.txt-p {
-    font: size 16px;
-    color: #414247;
-    padding: 0 250px;
-    margin-bottom: 35px;
-}
-
-.coffee-group {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 50px;
-}
-
-.coffee-1 img {
-    width: 200px;
-}
-
-.coffee-img {
-    position: absolute;
-    top:0;
-    right: 0;
+footer{
+    width: 1366px;
+    height: 250px;
+    background-color: rgb(15, 92, 163);
 }
